# FinBatch

./: Pipfile  README.md  config.yaml  exchanges.json  logging.yaml  main.py  pyproject.toml  tests.py
api/: restapi.py
config/: config_reader.py  graphql_config.py  test_config_reader.py
dao/: companies_dao.py  test_companies_dao.py
db/: mongo_db.py
grql/: companies_microservice.py
processor/: stock_processor.py
rest/: flask_blueprints.py  rest_api.py  restapi.py
scheduler/: jobs_manager.py
service/: companies_service.py  csv_file_reader.py  eod_csv_file_reader.py  jobs_aps.py  jobs_manager.py  sample_stock_csv_data.csv  sample_stock_json_data.json  stock_service.py  symbol_delegator.py  symbol_service.py  test_companies_service.py  test_csv_file_reader.py  test_eod_csv_file_reader.py
singletons/: app_singletons.py  config_singletons.py
stock/: alphavantage_processor.py  fmp_processor.py  fmp_reader.py  fmp_stock_processor.py  generic_rest_reader.py  stock_api_delegator.py  stock_processor_alphavantage.py  stock_service.py
symbol/: alphavantage_reader.py  eod_reader.py  fmp_reader.py  symbol_api_delegator.py  symbol_service.py
tests/: sample_stock_csv_data.csv  sample_stock_json_data.json  test_companies_dao.py  test_companies_service.py  test_config.yaml  test_config_reader.py  test_csv_reader.py  test_eod_csv_file_reader.py  test_stock_fmp_reader.py  test_stock_processor.py  test_stock_service.py  test_symbol_api_delegator.py  test_symbol_fmp_reader.py  test_symbol_service.py
util/: constants.py  csv_reader.py  safe_convert.py  symbol_api_url.py
(+14 files in other folders)
