[tool.poetry]
name = "FinBatch"
version = "0.1.0"
description = ""
authors = ["Daniel <moraisd@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"
requests = "^2.32.3"
apscheduler = "^3.10.4"
gql = { extras = ["requests"], version = "^3.5.0" }
fmpsdk = "^20240330.0"
coverage = "^7.6.4"
parameterized = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
